--- a/src/app/(gizmoflip)/components/ThemeLoader/styles.module.css
+++ b/src/app/(gizmoflip)/components/ThemeLoader/styles.module.css
@@ -22,8 +22,8 @@
   background: var(--bg-color);
   border: 2px solid var(--text-pri);
   border-radius: 10px;
-  margin: var(--step-1);
-  padding: 1rem;
+  margin: var(--step-2);
+  padding: var(--step-0);
   width: min(500px, 90vw);
   max-height: min(700px, 80vh);
   font-family: "Maragsa", sans-serif;
